# filder-info

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  release.bat  setup.py
commands/: file_analyze.py  folder_analyze.py
docs/: COMMANDS.md  README.md  USAGE.md
